# ez-dyndns-rs

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/docker/: Dockerfile.hbs
.github/scripts/: build-images.py  dockerfile.py  prepare-manifests.py  requirements.txt  version.py
.github/workflows/: release.yml  test.yml
dyndns/: Cargo.toml
dyndns-aws-route53/: Cargo.toml
dyndns-aws-route53/src/: bin.rs  lib.rs  provider.rs
dyndns-gandi-livedns/: Cargo.toml
dyndns-gandi-livedns/src/: bin.rs  client.rs  lib.rs  provider.rs
dyndns/src/: config.rs  dyndns.rs  env.rs  ez.rs  ip.rs  job.rs  lib.rs  provider.rs  result.rs
