[package]
name = "dyndns-aws-route53"
version = "0.1.0"
edition = "2021"
authors = ["Alex Katlein <dev@vemilyus.com>"]
license = "BSD 3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyndns = { path = "../dyndns" }
aws-config = "0.2"
aws-sdk-route53 = "0.2"
tokio = { version = "1", features = ["full"] }
# tracing = "0.1.29"
# tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }

[[bin]]
name = "dyndnsd-aws-route53"
path = "src/bin.rs"
