[package]
name = "dyndns-gandi-livedns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyndns = { path = "../dyndns" }
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "dyndns-gandi-livedns"
path = "src/bin.rs"
