[package]
name = "dyndns"
version = "0.1.0"
edition = "2021"
authors = ["Alex Katlein <dev@vemilyus.com>"]
license = "BSD 3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.49"
chrono = "0.4.19"
pico-args = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_with = "1.11.0"
ureq = "2.3.1"
zeroize = { version = "1.4.3", features = ["zeroize_derive"] }

[dev-dependencies]
tempfile = "3.2.0"
