[package]
name = "dyndns"
version = "0.1.0"
edition = "2021"
authors = ["Alex Katlein <dev@vemilyus.com>"]
license = "BSD 3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
chrono = "0.4"
pico-args = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_with = "1.11"
ureq = { version = "2.3", features = ["json", "webpki-roots"] }

[dev-dependencies]
tempfile = "3.2"
